   - ofaClassesPage class is renamed to ofaClassPage (todo #844).
   - ofaBatsPage class is renamed to ofaBatPage (todo #844).
   - ofaBalancesGrid class is renamed to ofaBalanceGridBin (todo #844/850).
   - ofaCurrenciesPage class is renamed to ofaCurrencyPage (todo #844).
   - ofaLedgersPage class is renamed to ofaLedgerPage (todo #844).

-----------------------------------------------------------------------
 Version 0.39
 ============

 Released on 2014-04-18

 New features:

	- Have account and ledger convertors on EBP import scripts (todo #771).
	- Import settleable indicator from EBP accounts (todo #779).
	- EBP imports now accept a field separator argument.
	- Have a 'About...' dialog (todo #8).
	- Improve DossierProperties dialog box (todo #755).
	- RestoreAssistant: add filter to file chooser (todo #742).
	- Have both Accounts balance and Entries balance (todo #805).
	- Closing exercice: forward entries are created in validated status.
	- Printings have a page view before actually print (todo #695).

 Bug fixes:

   - Improve ledger closing checks before validation (todo #772).
   - Import PDF: make sure we do not import empty lines.
   - Fix entry_load_dataset() query build.
   - PrintGeneralBooks: doesn't try to print while computing count of
     pages (todo #782).
   - PrintLedgers: remove double ORDER clause.
   - Fix segfault when trying to import again a BAT file (todo #781).
   - Reconciliation: disable buttons when opening the page (todo #750).
   - Fix ledgers updates when the entry amount is modified (todo #741).
   - Get rid of rounding errors when displaying the balances (todo #740).
   - Get rid of '(null)' piece reference (todo #787).
   - Do not try to compute balances while currency if not set (todo #786).
   - No more modifiy operation date when checking effect date (todo #785).
   - GuidedInputEx:
     . make entries insensitive while no operation template is defined
     . fix dates check format (todo #789).
   - Backup: