@@ -494,6 +494,7 @@
                 ofaBalancesGrid -> ofaBalanceGridBin
                 ofaCurrenciesPage -> ofaCurrencyPage
                 ofaLedgersPage -> ofaLedgerPage
+                ofaLedgersBookBin -> ofaLedgerBookBin
 
  845 2015-10- 1 have a UserCredentialsBin to be used in DossierLogin
                 and DossierOpen
