@@ -105,6 +105,7 @@
    - ofaBalancesGrid class is renamed to ofaBalanceGridBin (todo #844/850).
    - ofaCurrenciesPage class is renamed to ofaCurrencyPage (todo #844).
    - ofaLedgersPage class is renamed to ofaLedgerPage (todo #844).
+   - ofaLedgersBookBin class is renamed to ofaLedgerBookBin (todo #844).
 
 -----------------------------------------------------------------------
  Version 0.39
